--- a/src/pages/about/about.html
+++ b/src/pages/about/about.html
@@ -76,7 +76,7 @@
 
    <paginate-search [pageSize] = "pageSize" [pages] = "totalPage" [hidden]="!(searchedList?.length > 0)" #paginate  ></paginate-search>
 
-   <div class="no-favorites">
+   <div class="no-favorites" *ngIf="!(searchedList?.length > 0)">
       No favorites to show
    </div>
    </div>
