--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -22,7 +22,7 @@
            
                 <ion-card-content class="bank-detail-card">
                 <ion-row class="bank-name">
-                  <ion-col col-11>
+                  <ion-col col-11 style="text-align: left !important;">
                       {{bank.bank_name}}
                   </ion-col>
       
