bank detail page created

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -18,7 +18,7 @@
       
        <ion-row *ngIf="searchedList?.length > 0">
          <ion-col col-12 col-md-6 col-lg-4 *ngFor="let bank of searchedList | slice: pageMetadata?.index1: pageMetadata?.index2">
-            <ion-card class="bank-card">
+            <ion-card class="bank-card" (click)="navigateToBankDetails(bank)">
            
                 <ion-card-content class="bank-detail-card">
                 <ion-row class="bank-name">
