added alert in delete favorite

--- a/src/pages/about/about.html
+++ b/src/pages/about/about.html
@@ -25,7 +25,7 @@
              </ion-col>
             
              <ion-col col-1>
-                <button ion-button small clear (click)="removeBankFromFavorite(bank)"> <ion-icon name="remove-circle"></ion-icon> </button>
+                <button ion-button small clear (click)="alertDeleteFavorite(bank)"> <ion-icon name="remove-circle" style="color: red;"></ion-icon> </button>
              </ion-col>
            </ion-row>  
  
