--- a/src/pages/about/about.html
+++ b/src/pages/about/about.html
@@ -16,7 +16,7 @@
 
   <ion-row *ngIf="searchedList?.length > 0">
     <ion-col col-12 col-md-6 col-lg-4 *ngFor="let bank of searchedList | slice: pageMetadata?.index1: pageMetadata?.index2 ">
-       <ion-card class="bank-card" (click)="navigateToBankDetails(bank)">
+       <ion-card class="bank-card">
       
            <ion-card-content class="bank-detail-card">
            <ion-row class="bank-name">
@@ -62,7 +62,14 @@
                  {{bank.state}}
                </div>
              </ion-col>
+
            </ion-row>
+
+           <div class="more-details">
+              <button ion-button small clear (click)="navigateToBankDetails(bank)" >
+                More details
+              </button>
+            </div>
  
            <!-- <ion-row class="bank-address">
              {{bank.address}}
