entered select city button

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -7,6 +7,9 @@
 <ion-content class="home">
   <div class="page-margin">
       <div class="select-city">
+        <div>
+          Please Select city
+        </div>
         <button ion-button (click)="selectCity()" small >
             {{selectedCity}}
           </button>
